--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_de.properties
@@ -21,20 +21,20 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JSP.administrationTab = Administration
-JSP.searchTab = Search
-JSP.searchField = Id or Name
-JSP.search = Search
-JSP.space = Spaces / subspaces
+JSP.administrationTab = Verwaltung
+JSP.searchTab = Suche
+JSP.searchField = Id oder Namen (außer Publikationen)
+JSP.search = Suche
+JSP.space = Spaces / Unterspaces
 JSP.service = Services
-JSP.publication = Publications
-JSP.group = Groups / subgroups of users
-JSP.user = Users
-JSP.noResult = 0 result found
-JSP.listResult = List of results
+JSP.publication = Publikationen
+JSP.group = Gruppen / Untergruppen von Benutzern
+JSP.user = Benutzer
+JSP.noResult = 0 Ergebnisse
+JSP.listResult = Ergebnisliste
 JSP.name = Name
-JSP.desc = Description
-JSP.creaDate = Creation date
-JSP.creaName = Creator name
-JSP.path = Path
-JSP.domainMixt = Shared domain
+JSP.desc = Beschreibung
+JSP.creaDate = Erstellungsdatum
+JSP.creaName = Name des Erstellers
+JSP.path = Lage
+JSP.domainMixt = Shared Domain
