--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_en.properties
@@ -23,7 +23,7 @@
 #
 JSP.administrationTab = Administration
 JSP.searchTab = Search
-JSP.searchField = Id or Name
+JSP.searchField = Id or Name (except publications)
 JSP.search = Search
 JSP.space = Spaces / subspaces
 JSP.service = Services
