--- a/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
@@ -263,3 +263,8 @@ admin.MSG_ERR_GET_RESTORE_COMPONENT_FROM_BASKET = Impossible to restore the comp
 admin.MSG_ERR_GET_RESTORE_SPACE_FROM_BASKET = Impossible to restore the space from the trash
 admin.EX_ERR_SEND_SPACE_TO_BASKET = Impossible to send the space to the trash
 admin.EX_ERR_SEND_COMPONENT_TO_BASKET = Impossible to send the component to the trash
+
+admin.CANT_INDEX_USERS = Impossible to index users of a domain
+admin.CANT_INDEX_ALL_USERS = Impossible to index users
+admin.CANT_INDEX_GROUPS = Impossible to index groups of a domain
+admin.CANT_INDEX_ALL_GROUPS = Impossible to index groups
