--- a/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
@@ -263,3 +263,8 @@ admin.MSG_ERR_GET_RESTORE_COMPONENT_FROM_BASKET = Impossible de restaurer le com
 admin.MSG_ERR_GET_RESTORE_SPACE_FROM_BASKET = Impossible de restaurer l'espace depuis la corbeille
 admin.EX_ERR_SEND_SPACE_TO_BASKET = Impossible d'envoyer l'espace dans la corbeille
 admin.EX_ERR_SEND_COMPONENT_TO_BASKET = Impossible d'envoyer le composant dans la corbeille
+
+admin.CANT_INDEX_USERS = Impossible d'indexer les utilisateurs d'un domaine
+admin.CANT_INDEX_ALL_USERS = Impossible d'indexer les utilisateurs
+admin.CANT_INDEX_GROUPS = Impossible d'indexer les groupes d'un domaine
+admin.CANT_INDEX_ALL_GROUPS = Impossible d'indexer les groupes
