update feature #2097 Add data type search in advanced search mode

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -166,7 +166,7 @@ pdcPeas.searchDomain = Research Domain
 pdcPeas.AllAuthors = All
 pdcPeas.Navigation = Browse
 pdcPeas.requete = Keywords
-pdcPeas.typerecherche = Search type
+pdcPeas.typerecherche = Search type :
 pdcPeas.resultat = Result
 pdcPeas.reptrouve = document found
 pdcPeas.pertinence = Relevance
@@ -176,6 +176,7 @@ pdcPeas.definition = Definition
 pdcPeas.valeur = Value
 pdcPeas.emplacement = Place
 pdcPeas.definition = Definition
+pdcPeas.searchType = Publication type
 
 pdcPeas.glossaire_to_view = Display glossary
 pdcPeas.tracker_to_select = Validate selection
@@ -291,3 +292,10 @@ pdcPeas.error= Error
 # Label linked to pdcPeasSettings.properties
 external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
+
+# Label linked to pdcPeasSettings.properties : typed search
+search.type.1.label= Theme tracker
+search.type.2.label= Events
+search.type.3.label= Pictures
+search.type.4.label= Questions
+search.type.5.label= Project manager
