feature #1266 : Adding generic messages for subscription

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-// bouton, action, tableau ...
+# bouton, action, tableau ...
 GML.add							= Hinzuf&uuml;gen
 GML.address 						= Adresse
 GML.admin						= Administrator
@@ -150,43 +150,44 @@ GML.search						= Suchen
 GML.size						= Gr&ouml;sse
 GML.space						= Bereich
 GML.status						= Status
-GML.subscription					= Abonnement
+GML.subscription				= Abonnement
+GML.subscribe                   = Zeichnen
+GML.unsubscribe                 = Abmelden
 GML.shrink						= Reduzieren
 GML.surname						= Vorname
-GML.selection						= Auswahl
+GML.selection					= Auswahl
 GML.select						= W&auml;hlen Sie...
 
-GML.toSelect						= W&auml;hlen
-GML.theField						= das Feld
-GML.requiredField					= Obligatorisch
+GML.toSelect					= W&auml;hlen
+GML.theField					= das Feld
+GML.requiredField				= Obligatorisch
 GML.by							= von
 GML.theme						= Thema
 GML.title						= Titel
 GML.type						= Typ
 
-GML.unlock					        = Entsperren
+GML.unlock					    = Entsperren
 GML.upload						= Hinaufladung
 GML.user						= Ben&uuml;tzer
 GML.users						= Ben&uuml;tzer
 
-GML.validate					        = Best&auml;tigen
-GML.viewCalendar					= Kalender anzeigen
-GML.calendar = Kalender
+GML.validate					= Best&auml;tigen
+GML.viewCalendar				= Kalender anzeigen
+GML.calendar                    = Kalender
 GML.week						= Woche
 
 GML.year 						= Jahr
-GML.yes						        = Ja
+GML.yes						    = Ja
 
-// Window title
-GML.popupTitle						= Silverpeas
+# Window title
+GML.popupTitle					= Silverpeas
 
-GML.trademark						= &copy; 2001-2011 Silverpeas - All Rights Reserved
+GML.trademark					= &copy; 2001-2011 Silverpeas - All Rights Reserved
 
-// Formulaire
+# Formulaire
+GML.requiredField				= Obligatorisch
 
-GML.requiredField					= Obligatorisch
-
-// format
+#Format
 GML.dateFormat = dd/MM/yyyy
 GML.dateFormatExemple = dd/mm/yyyy
 GML.hourFormat = HH:mm
@@ -222,7 +223,7 @@ GML.mois9 = Oktober
 GML.mois10 = November
 GML.mois11 = Dezember
 
-//Contr\u00f4le JavaScript
+#Contr\u00f4le JavaScript
 GML.ThisFormContains = Dieses Fomular enth&auml;lt
 GML.MustBeFilled = muss ausgef&uuml;llt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
@@ -236,13 +237,13 @@ GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
 GML.MustContainsLettersAndDigitsOnly = must be composed only of letters and numbers
 
-//Plan de classement
+#Plan de classement
 GML.PDC = Klassierungsplan
 GML.PDCParam = Die Verwendung der PDC parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCDeletePosition = Die gew&auml;hlten Positionen l&ouml;schen
 
-//Contr\u00f4les d'acc\u00e8s
+#Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf&uuml;gen nicht &uuml;ber gen&uuml;gende Rechte, um zur gew&uuml;nschten Information Zugang zu erhalten!
 GML.DocumentNotFound = Die Information, die Sie abfragen m&ouml;chten, existiert nicht mehr!
 
@@ -252,7 +253,7 @@ GML.updateDate = Ge&auml;ndert am
 GML.language = Sprache
 GML.translationRemove = Diese &Uuml;bersetzung l&ouml;schen
 
-//Import CSV
+#Import CSV
 GML.csvFile = CSV Datei
 GML.ligne = - Reihe
 GML.colonne = Spalte
@@ -262,7 +263,7 @@ GML.nbCarMax = Der Wert darf nicht &Uuml;berschritten werden
 GML.nbCarMin = Der Wert muss mindestens
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
-//Export CSV
+#Export CSV
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
 GML.ExportInProgress = Export l\u00e4uft ...
