--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -21,7 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// bouton, action, tableau ...
+
+# Bouton, action, tableau ...
 GML.add							= Add
 GML.address 						= Address
 GML.admin						= Manager
@@ -148,14 +149,16 @@ GML.search						= Search
 GML.size						= Size
 GML.space						= Workspace
 GML.status						= Status
-GML.subscription                                        = Subscription
+GML.subscription                = Subscription
+GML.subscribe                   = Subscribe
+GML.unsubscribe                 = Unsubscribe
 GML.shrink						= Minimize
 GML.surname						= First name
-GML.selection						= Selection
+GML.selection					= Selection
 GML.select						= Select
 
-GML.toSelect						= Select
-GML.theField						= the field
+GML.toSelect					= Select
+GML.theField					= the field
 GML.theme						= Theme
 GML.title						= Title
 GML.type						= Type
