Ajout de la traduction GML.permalink = Permalien. Cette traduction est redefinie dans gallery, almanach et quizz. Faudrait la centraliser.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -33,6 +33,7 @@ GML.allMP						= Alle
 GML.allFP						= Alle
 GML.agenda 						= Agenda
 GML.attachments 					= Beigef&uuml;gte Dateien
+GML.permalink 						= Permalink
 GML.noLockedFile           = No checked out file !
 GML.author						= Author
 GML.publisher						= Herausgeber
