--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -32,6 +32,7 @@ GML.allMP						= All
 GML.allFP						= All
 GML.agenda 						= Agenda
 GML.attachments 					= Attachments
+GML.permalink 						= Permalink
 GML.noLockedFile           = No checked out file !
 GML.author						= Author
 GML.publisher						= Publisher
