closing feature #2097 Now, search based on contributions type is possible without entering keywords.

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -284,8 +284,10 @@ external.search.server.1.label=Mein Externer Server 1
 external.search.server.2.label=Mein Externer Server 2
 
 # Label linked to pdcPeasSettings.properties : typed search
-search.type.1.label= Theme tracker
+search.type.1.label= Publications
 search.type.2.label= Events
 search.type.3.label= Pictures
-search.type.4.label= Questions
-search.type.5.label= Project manager
+search.type.4.label= Polls, Surveys
+search.type.5.label= Tasks (project)
+search.type.6.label= Blogs
+search.type.7.label= Forums
