Moving Deutsch translations at their right place

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -22,8 +22,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-# bouton, action, tableau ...
-GML.add							= Hinzuf&uuml;gen
+// bouton, action, tableau ...
+GML.add							= Hinzuf\u00fcgen
 GML.address 						= Adresse
 GML.admin						= Administrator
 GML.administrateur					= Administrator
@@ -32,8 +32,7 @@ GML.allFS						= Ganze
 GML.allMP						= Alle
 GML.allFP						= Alle
 GML.agenda 						= Agenda
-GML.attachments 					= Beigef&uuml;gte Dateien
-GML.noLockedFile           = No checked out file !
+GML.attachments 					= Beigef\u00fcgte Dateien
 GML.author						= Author
 GML.publisher						= Herausgeber
 GML.affichierCalendrier                                 = Kalender anzeigen
@@ -41,7 +40,7 @@ GML.affichierCalendrier                                 = Kalender anzeigen
 GML.export						= Exportieren
 GML.import						= Importieren
 
-GML.back						= Zur&uuml;ck
+GML.back						= Zur\u00fcck
 
 GML.cancel						= Abbrechen
 GML.categories 						= Kategorien
@@ -52,7 +51,7 @@ GML.company 						= Firma
 GML.component                                           = KM-Service
 GML.copy 						= Kopieren
 GML.create						= Erstellen
-GML.createPublication			                = Erstellen einer Ver&ouml;ffentlichung
+GML.createPublication			                = Erstellen einer Ver\u00f6ffentlichung
 GML.createTheme						= Erstellen eines Themas
 GML.cut							= Schneiden
 GML.generatePDF						= Erzeuges eines PDF
@@ -61,18 +60,18 @@ GML.date						= Datum
 GML.dateBegin 						= Anfangsdatum
 GML.dateEnd 						= Enddatum
 GML.day							= Tag
-GML.delete						= L&ouml;schen
-GML.deleteAll						= Alles L&ouml;schen
+GML.delete						= L\u00f6schen
+GML.deleteAll						= Alles L\u00f6schen
 GML.description						= Beschreibung
 GML.detail						= Detail
 GML.domain						= Bereich
 GML.domainManager					= Domain-Administrator
-GML.domains						= R&auml;ume
+GML.domains						= R\u00e4ume
 GML.download						= Herunterladung
 
 GML.eMail 						= E-Mail
 GML.empty                                               = Leer
-GML.enlarge						= Vergr&ouml;ssern
+GML.enlarge						= Vergr\u00f6ssern
 GML.error						= Fehler
 GML.errors						= Fehler
 
@@ -88,11 +87,11 @@ GML.head						= Kopf
 GML.help						= Hilfe
 GML.homePhoneNumber 			                = Privattel.
 
-GML.insertHere						= Hier einf&uuml;gen
+GML.insertHere						= Hier einf\u00fcgen
 
 GML.jobPeas						= Dienst
 
-GML.keyWords						= Schl&uuml;sselw&ouml;rter
+GML.keyWords						= Schl\u00fcsselw\u00f6rter
 GML.kmmanager                   			= Administrator des Klassierungsplanes
 
 GML.label						= Text
@@ -103,7 +102,7 @@ GML.lastName                                            = Name
 GML.management						= Verwaltung
 GML.messages						= Meldungen
 GML.minimize					        = Minimieren
-GML.modify						= &Auml;ndern
+GML.modify						= \u00C4ndern
 GML.month 						= Monat
 GML.move						= Verschieben
 
@@ -111,11 +110,11 @@ GML.name						= Name
 GML.nom						        = Name
 GML.next 						= Weiter
 GML.no							= Nein
-GML.noAttachment					= Keine Datei beigef&uuml;gt
+GML.noAttachment					= Keine Datei beigef\u00fcgt
 GML.noFavorit						= Kein
 GML.none						= Kein
 GML.noneF						= Keine
-GML.nopublication					= Keine Ver&ouml;fffentlichung
+GML.nopublication					= Keine Ver\u00f6fffentlichung
 GML.noStatistic						= Keine
 GML.noSubcription					= Keine
 GML.notification					= NotificationBenachrichtigung
@@ -128,68 +127,68 @@ GML.organization					= Organisationen
 GML.order					        = Reihenfolge
 
 GML.password 						= Passwort
-GML.paste						= Einf&uuml;gen
+GML.paste						= Einf\u00fcgen
 GML.path						= Speicherort
 GML.phoneNumber 					= Telefon
 GML.position 						= Posten
 GML.public 						= &Ouml;ffentlich
 GML.preview						= Vorschau
-GML.previous						= Zur&uuml;ck
+GML.previous						= Zur\u00fcck
 GML.print						= Drucken
-GML.priority 						= Priorit&auml;t
+GML.priority 						= Priorit\u00e4t
 GML.privateFS 						= Private
 GML.privateMS 						= Privater
-GML.publication						= Ver\u00f6ffentlichung
-GML.publications					= Ver\u00f6ffentlichungen
-GML.publish						= Ver&ouml;ffentlichen
+GML.publication						= Veröffentlichung
+GML.publications					= Veröffentlichungen
+GML.publish						= Ver\u00f6ffentlichen
 
 GML.restore						= Wiederherstellen
 
-GML.saveDraft					= Abspeichern
 GML.search						= Suchen
-GML.size						= Gr&ouml;sse
+GML.size						= Gr\u00f6sse
 GML.space						= Bereich
 GML.status						= Status
-GML.subscription				= Abonnement
-GML.subscribe                   = Zeichnen
-GML.unsubscribe                 = Abmelden
+GML.subscription					= Abonnement
 GML.shrink						= Reduzieren
 GML.surname						= Vorname
-GML.selection					= Auswahl
-GML.select						= W&auml;hlen Sie...
+GML.selection						= Auswahl
+GML.select						= W\u00e4hlen Sie...
 
-GML.toSelect					= W&auml;hlen
-GML.theField					= das Feld
-GML.requiredField				= Obligatorisch
+GML.toSelect						= W\u00e4hlen
+GML.theField						= das Feld
+GML.requiredField					= Obligatorisch
 GML.by							= von
 GML.theme						= Thema
 GML.title						= Titel
 GML.type						= Typ
 
-GML.unlock					    = Entsperren
+GML.unlock					        = Entsperren
 GML.upload						= Hinaufladung
-GML.user						= Ben&uuml;tzer
-GML.users						= Ben&uuml;tzer
+GML.user						= Ben\u00fctzer
+GML.users						= Ben\u00fctzer
 
-GML.validate					= Best&auml;tigen
-GML.viewCalendar				= Kalender anzeigen
-GML.calendar                    = Kalender
+GML.validate					        = Best\u00e4tigen
+GML.viewCalendar					= Kalender anzeigen
+GML.calendar = Kalender
 GML.week						= Woche
 
 GML.year 						= Jahr
-GML.yes						    = Ja
+GML.yes						        = Ja
 
-# Window title
-GML.popupTitle					= Silverpeas
+GML.noLockedFile           = Keine reservierte Datei!
 
-GML.trademark					= &copy; 2001-2011 Silverpeas - All Rights Reserved
+// Window title
+GML.popupTitle						= Silverpeas
 
-# Formulaire
-GML.requiredField				= Obligatorisch
+GML.trademark						= Copyright 2001-2011 Silverpeas - All Rights Reserved
 
-#Format
-GML.dateFormat = dd/MM/yyyy
-GML.dateFormatExemple = dd/mm/yyyy
+// Formulaire
+
+GML.requiredField					= Obligatorisch
+
+// format
+GML.dateFormat = dd.MM.yyyy
+GML.dateFormatExemple = dd.mm.yyyy
 GML.hourFormat = HH:mm
 
 GML.weekFirstDay = 2
@@ -202,17 +201,17 @@ GML.jour6 = Freitag
 GML.jour7 = Samstag
 GML.jour1 = Sonntag
 
-GML.shortJour2 = Mon
-GML.shortJour3 = Die
-GML.shortJour4 = Mit
-GML.shortJour5 = Don
-GML.shortJour6 = Fre
-GML.shortJour7 = Sam
-GML.shortJour1 = Son
+GML.shortJour2 = M
+GML.shortJour3 = D
+GML.shortJour4 = M
+GML.shortJour5 = D
+GML.shortJour6 = F
+GML.shortJour7 = S
+GML.shortJour1 = S
 
 GML.mois0 = Januar
 GML.mois1 = Februar
-GML.mois2 = M&auml;rz
+GML.mois2 = M\u00e4rz
 GML.mois3 = April
 GML.mois4 = Mai
 GML.mois5 = Juni
@@ -223,72 +222,75 @@ GML.mois9 = Oktober
 GML.mois10 = November
 GML.mois11 = Dezember
 
-#Contr\u00f4le JavaScript
-GML.ThisFormContains = Dieses Fomular enth&auml;lt
-GML.MustBeFilled = muss ausgef&uuml;llt werden
+//Contrôle JavaScript
+GML.ThisFormContains = Dieses Fomular enth\u00e4lt 
+GML.MustBeFilled = muss ausgef\u00fcllt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
 GML.MustContainsFloat = muss eine Zahl enthalten
 GML.MustContainsCorrectDate = muss ein Datum enthalten
-GML.MustContainsPostDateTo = muss ein Datum enthalten, das sp&auml;ter ist als
-GML.MustContainsPostOrEqualDateTo = muss ein datum enthalten, das sp&auml;ter ist als oder gleich ist wie
+GML.MustContainsPostDateTo = muss ein Datum enthalten, das sp\u00e4ter ist als
+GML.MustContainsPostOrEqualDateTo = muss ein datum enthalten, das sp\u00e4ter ist als oder gleich ist wie
 GML.MustContainsPostDate = muss ein Datum enthalten, das nach dem heutigen Datum liegt
 GML.MustContainsDateBetween1 = muss ein Datum enthalten zwischen dem
-GML.MustContainsDateBetween2 = und dem
+GML.MustContainsDateBetween2 = und dem 
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
-GML.MustContainsLettersAndDigitsOnly = must be composed only of letters and numbers
+GML.MustContainsLettersAndDigitsOnly = sollte nur aus Buchstaben und Zahlen bestehen
 
-#Plan de classement
+//Plan de classement
 GML.PDC = Klassierungsplan
-GML.PDCParam = Die Verwendung der PDC parametrisieren
+GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
-GML.PDCDeletePosition = Die gew&auml;hlten Positionen l&ouml;schen
+GML.PDCDeletePosition = Die gew\u00e4hlten Positionen l\u00f6schen
 
-#Contr\u00f4les d'acc\u00e8s
-GML.ForbiddenAccessContent = Sie verf&uuml;gen nicht &uuml;ber gen&uuml;gende Rechte, um zur gew&uuml;nschten Information Zugang zu erhalten!
-GML.DocumentNotFound = Die Information, die Sie abfragen m&ouml;chten, existiert nicht mehr!
+//Contrôles d'accès
+GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
+GML.DocumentNotFound = Die Information, die Sie abfragen m\u00f6chten, existiert nicht mehr!
 
 GML.creationDate = Erstellt am
-GML.updateDate = Ge&auml;ndert am
+GML.updateDate = Ge\u00e4ndert am
 
 GML.language = Sprache
-GML.translationRemove = Diese &Uuml;bersetzung l&ouml;schen
+GML.translationRemove = Diese \u00DCbersetzung l\u00f6schen
 
-#Import CSV
+//Import CSV
 GML.csvFile = CSV Datei
 GML.ligne = - Reihe
-GML.colonne = Spalte
+GML.colonne = Spalte 
 GML.valeur = Wert
 GML.obligatoire = Dieses Feld ist obligatorisch
-GML.nbCarMax = Der Wert darf nicht &Uuml;berschritten werden
-GML.nbCarMin = Der Wert muss mindestens
+GML.nbCarMax = Der Wert darf nicht \u00DCberschritten werden
+GML.nbCarMin = Der Wert muss mindestens 
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
-#Export CSV
+//Export CSV
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
-GML.ExportInProgress = Export l\u00e4uft ...
-GML.ExportCSV = Export CSV
+GML.ExportInProgress = Export läuft ...
 
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
 
-GML.or = oder
-GML.galleries = Galleries
+doit être composé uniquement de lettres et de chiffres
 
-GML.applet.dnd.alt=Applet for files drag and drop
+GML.personalSpace = Espace personnel
+GML.linkTo = R\u00e9f\u00e9rencer
+GML.or = ou
+GML.galleries = Phototh\u00e8ques
+GML.applet.dnd.alt=Applet pour le glisser/d\u00e9poser de fichiers
 
 GML.user.type.A = Administrator
-GML.user.type.D = Domain-Administrator
-GML.user.type.K = Administrator des Klassierungsplanes
-GML.user.type.U = Ben&uuml;tzer
+GML.user.type.D = Domain Vervalter
+GML.user.type.K = Klassierungsplan Vervalter
+GML.user.type.U = Benutzer
 GML.user.type.G = Gast
 
-GML.notification.subject = Subject
-GML.notification.message = Message
+GML.notification.send = Nachricht senden
+GML.notification.subject = Betreff
+GML.notification.message = Nachricht
+GML.user.online = Verbunden
+GML.user.online.for = Verbunden seit
+GML.user.offline = Offline
 
-GML.mandatory = obligatorisch
+GML.mandatory = Obligatorisch
 
 GML.and = und
-GML.reset = Reset
-
-GML.operations.setupComponent = Setup this service
