--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/i18n_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/i18n_de.properties
@@ -22,6 +22,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-language_fr = Franz\u00F6sisch
+language_fr = Franz\u00f6sisch
 language_en = Englisch
 language_de = Deutsch
