Il manque author, avatar, domaine pour permanent link et test affichage sous les IE

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -186,6 +186,8 @@ GML.trademark					= &copy; 2001-2011 Silverpeas - All Rights Reserved
 
 # Formulaire
 GML.requiredField				= Obligatorisch
+GML.fromDate							= Von
+GML.toDate							= bis zum
 
 #Format
 GML.dateFormat = dd/MM/yyyy
