--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -186,6 +186,8 @@ GML.thefield						= The field
 GML.isRequired						= is required.
 GML.requiredField					= Required
 GML.by							= by
+GML.fromDate							= From
+GML.toDate							= to
 
 // format
 GML.dateFormat = MM/dd/yyyy
