Feature #1710. Adds additional operations into the PdC JQuery plugin so that clients can have access the set of used PdC'axis and the positions of a classification. This can be used mainly to permit the client to add and to control the classification to a new content

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -291,3 +291,6 @@ pdcPeas.error= Error
 # Label linked to pdcPeasSettings.properties
 external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
+
+pdcPeas.MustContainsMandatoryAxis=must have a position with the mandatory axis
+pdcPeas.theContent=The content
