--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -32,6 +32,7 @@ GML.allFS						= Ganze
 GML.allMP						= Alle
 GML.allFP						= Alle
 GML.agenda 						= Agenda
+GML.permalink             				= Permalink
 GML.attachments 					= Beigef\u00fcgte Dateien
 GML.author						= Author
 GML.publisher						= Herausgeber
@@ -180,11 +181,14 @@ GML.noLockedFile           = Keine reservierte Datei!
 // Window title
 GML.popupTitle						= Silverpeas
 
+
 GML.trademark						= Copyright 2001-2011 Silverpeas - All Rights Reserved
 
 // Formulaire
 
 GML.requiredField					= Obligatorisch
+GML.fromDate						= Von
+GML.toDate						= bis zum
 
 // format
 GML.dateFormat = dd.MM.yyyy
