--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -33,6 +33,7 @@ GML.allMP						= All
 GML.allFP						= All
 GML.agenda 						= Agenda
 GML.attachments 					= Attachments
+GML.permalink             			= Permalink
 GML.noLockedFile           = No checked out file !
 GML.author						= Author
 GML.publisher						= Publisher
@@ -186,6 +187,8 @@ GML.thefield						= The field
 GML.isRequired						= is required.
 GML.requiredField					= Required
 GML.by							= by
+GML.fromDate							= From
+GML.toDate							= to
 
 // format
 GML.dateFormat = MM/dd/yyyy
