Feature #2167: Refinement of the RESTWebService API implementation: now the existance of the component instance requested through the HTTP request is checked with the user priviledges. No additional processing is now required for REST-based web service for doing. Add some translated messages in the generalMultilang for their use in the Almanach component

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -299,3 +299,7 @@ GML.and = and
 GML.reset = Reset
 
 GML.operations.setupComponent = Setup this service
+
+GML.to = to
+GML.at = at
+GML.From = From
