--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -301,3 +301,7 @@ GML.and = et
 GML.reset = Remise \u00e0 z\u00e9ro
 
 GML.operations.setupComponent = Param\u00e9trer ce service
+
+GML.to = au
+GML.at = \u00e0
+GML.From = De
