Feature 2167. Add some generic translated messages for the Almanach component

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -303,3 +303,5 @@ GML.operations.setupComponent = Setup this service
 GML.to = to
 GML.at = at
 GML.From = From
+GML.linkToVisit = Hyperlink at visiting
+GML.Show = Show:
