--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication_en.properties
@@ -40,7 +40,7 @@ authentication.logon.4 = You are not logged on
 
 authentication.reminder.label = Please answer the personal question below
 authentication.reminder.noQuestion = You have not yet chosen a personal question. If you forget your password, this question will allow you to reset it.
-authentication.reminder.question = Personal question 
+authentication.reminder.question = Personal question
 authentication.reminder.answer = Answer to the chosen question
 authentication.reminder.answer.empty = Please enter the answer to your question
 authentication.reminder.answer.confirm = Please confirm the answer to your question
@@ -53,3 +53,6 @@ authentication.password.confirm = Confirmation
 authentication.password.length = (at least * characters)
 authentication.password.length.alert = Your password must contain at least * characters
 authentication.password.different = The answer and confirmation are not the same
+authentication.password.aboutToExpire = Your password is about to expire. It is strongly recommended to change it as soon as possible.
+authentication.password.change = Change password
+authentication.password.remindMeLater = Remind me later
