Feature #1710. Integrates the work of Aurore on the PdC classification

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -84,6 +84,7 @@ pdcPeas.classifyAdd                    = Create a new position
 pdcPeas.classifyUpdate                 = Modify a position      
 pdcPeas.classifyDelete                 = Delete selected position(s)
 pdcPeas.position                       = Position
+pdcPeas.positions                      = Positions
 pdcPeas.noPosition                     = No position
 pdcPeas.rootValueNotAllowed	       = Root value is not authorized on following topic
 pdcPeas.addPosition                    = Add a position
@@ -294,6 +295,7 @@ external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
 pdcPeas.MustContainsMandatoryAxis=must have a position with the mandatory axis
+pdcPeas.MustBeClassified = The classification is mandatory to create a publication. <br />Please set a position with the mandatory axis.
 pdcPeas.theContent=The content
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
