--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -85,6 +85,7 @@ pdcPeas.classifyAdd                    = Cr\u00e9er une nouvelle position
 pdcPeas.classifyUpdate                 = Modifier une position
 pdcPeas.classifyDelete                 = Supprimer la ou les positions s\u00e9lectionn\u00e9e(s)
 pdcPeas.position                       = Position
+pdcPeas.positions                      = Positions
 pdcPeas.noPosition                     = Aucune position
 pdcPeas.rootValueNotAllowed			   = La valeur racine n'est pas autoris\u00e9e pour les axes suivants
 pdcPeas.addPosition                    = Ajouter une position
@@ -288,12 +289,13 @@ external.search.server.1.label=Mon serveur externe 1
 external.search.server.2.label=Mon serveur externe 2
 
 pdcPeas.MustContainsMandatoryAxis=doit contenir une position avec les axes obligatoires
+pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une publication. <br />Veuillez s\u00e9lectionner une position et la valider.
 pdcPeas.theContent=Le contenu
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications GED
-search.type.2.label= Evénements
+search.type.2.label= Ev\u00e9nements
 search.type.3.label= Images
-search.type.4.label= Sondages, Enquêtes
-search.type.5.label= Tâches (projet)
+search.type.4.label= Sondages, Enqu\u00eates
+search.type.5.label= T\u00e2ches (projet)
 search.type.6.label= Blogs
 search.type.7.label= Forums
