--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -244,6 +244,7 @@ GML.MustContainsLettersAndDigitsOnly = sollte nur aus Buchstaben und Zahlen best
 GML.PDC = Klassierungsplan
 GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
+GML.PDCValidatePosition = Validate diese Position
 GML.PDCDeletePosition = Die gew\u00e4hlten Positionen l\u00f6schen
 
 //Contr\u00f4les d'acc\u00e8s
