--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -243,7 +243,8 @@ GML.MustContainsLettersAndDigitsOnly = must be composed only of letters and numb
 #Plan de classement
 GML.PDC = Categorization
 GML.PDCParam = Set up the categorization scheme
-GML.PDCNewPosition = Create a new position
+GML.PDCNewPosition = Add a new position
+GML.PDCValidatePosition = Validate this position
 GML.PDCDeletePosition = Delete selected position(s)
 
 #Access Control
