--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -56,7 +56,7 @@ pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad l\u00f6schen 
 pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert l\u00f6schen zu wollen?
 pdcPeas.confirmDeletePosition          = Sind Sie sicher, die Position l\u00f6schen zu wollen?
 pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl l\u00f6schen zu wollen?
-pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enth\u00E4lt verschieben zu wollen ?
+pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enth\u00e4lt verschieben zu wollen ?
 
 pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher alle Administratoren l\u00f6schen zu wollen ?
 pdcPeas.deleteAllManagers			   = Alle Administratoren l\u00f6schen
@@ -83,9 +83,10 @@ pdcPeas.hideSecondaryAxis			   = Sekondare Achsen Verstecken
 
 pdcPeas.classifyPublication            = Klassifizierung
 pdcPeas.classifyAdd                    = Erstellen einer neuen Position
-pdcPeas.classifyUpdate                 = \u00C4ndern eine Position
+pdcPeas.classifyUpdate                 = \u00c4ndern eine Position
 pdcPeas.classifyDelete                 = Die gew\u00e4hlten Positionen l\u00f6schen
 pdcPeas.position                       = Position
+pdcPeas.positions                      = Positionen
 pdcPeas.noPosition                     = Keine Position
 pdcPeas.rootValueNotAllowed	       = Der Stammwert ist f\u00fcr die folgenden Achsen nicht gestattet
 pdcPeas.addPosition                    = Position hinzuf\u00fcgen
@@ -131,7 +132,7 @@ pdcPeas.SortValueSearch.1 = Relevanz
 pdcPeas.SortValueSearch.2 = Titel
 pdcPeas.SortValueSearch.3 = Autor
 pdcPeas.SortValueSearch.4 = Erstellungsdatum
-pdcPeas.SortValueSearch.5 = \u00C4nderungsdatum
+pdcPeas.SortValueSearch.5 = \u00c4nderungsdatum
 pdcPeas.SortValueSearch.6 = Standort
 pdcPeas.SortValueSearch.7 = Beliebtheit
 pdcPeas.DomainSelect = Bereich:
@@ -282,6 +283,7 @@ pdcPeas.error= Fehler
 # Label linked to pdcPeasSettings.properties
 
 pdcPeas.MustContainsMandatoryAxis=muss eine Position mit dem obligatorischen Achse
+pdcPeas.MustBeClassified = The classification is mandatory to create a publication. <br />Please set a position with the mandatory axis.
 pdcPeas.theContent=The content
 external.search.server.1.label=Mein Externer Server 1
 external.search.server.2.label=Mein Externer Server 2
