Feature #1710. Take into accounts the differents issues of Nicolas

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -104,6 +104,7 @@ pdcPeas.axisAlreadyExist               = Eine Achse mit dem gleichen Namen gibt 
 dcPeas.axisCantMove				   = Man kann eine Achse nicht verschieben !
 pdcPeas.valueAlreadyExist              = Einen Wert mit dem gleichen Namen gibt es bereits!
 pdcPeas.maximumAxisReach               = Die maximale Anzahl Achsen ist erreicht worden!
+pdcPeas.positionAlreadyExist           = Die Position ist bereits vorhanden!
 
 pdcPeas.emptyMotherName                = Das Feld ' Mutterwert ' ist obligatorisch
 pdcPeas.emptyDaughterName              = Das Feld ' Tochterwert ' ist obligatorisch
