--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -102,6 +102,7 @@ pdcPeas.axisAlreadyExist               = A same topic name already exists!
 pdcPeas.valueAlreadyExist              = A same value name already exists!
 pdcPeas.axisCantMove		       = A topic cannot be moved!
 pdcPeas.maximumAxisReach               = The maximum number of topics has been reached!
+pdcPeas.positionAlreadyExist           = A same position already exists!
 
 pdcPeas.emptyMotherName                = The field ' Mother value ' is required
 pdcPeas.emptyDaughterName              = The field ' Sister value ' is required
