--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -103,6 +103,7 @@ pdcPeas.axisAlreadyExist               = Un axe de m\u00eame nom existe d\u00e9j
 pdcPeas.axisCantMove				   = On ne peut d\u00e9placer un axe !
 pdcPeas.valueAlreadyExist              = Une valeur de m\u00eame nom existe d\u00e9j\u00e0 !
 pdcPeas.maximumAxisReach               = Le nombre maximum d'axes a \u00e9t\u00e9 atteint !
+pdcPeas.positionAlreadyExist           = La position existe d\u00e9j\u00e0 !
 
 pdcPeas.emptyMotherName                = Le champ ' Valeur m\u00e8re ' est obligatoire
 pdcPeas.emptyDaughterName              = Le champ ' Valeur fille ' est obligatoire
