--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -245,7 +245,7 @@ GML.PDC = Categorization
 GML.PDCParam = Set up the categorization scheme
 GML.PDCNewPosition = Add a new position
 GML.PDCValidatePosition = Validate this position
-GML.PDCDeletePosition = Delete selected position(s)
+GML.PDCDeletePosition = Delete the position
 
 #Access Control
 GML.ForbiddenAccessContent = You are not allowed to access this information!
@@ -309,3 +309,5 @@ GML.at = at
 GML.From = From
 GML.linkToVisit = Hyperlink at visiting
 GML.Show = Show:
+
+GML.selectAValue = Please select a value
