--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -245,7 +245,7 @@ GML.PDC = Klassierungsplan
 GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCValidatePosition = Validate diese Position
-GML.PDCDeletePosition = Die gew\u00e4hlten Positionen l\u00f6schen
+GML.PDCDeletePosition = L\u00f6schen Sie die Position
 
 //Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
@@ -305,3 +305,5 @@ GML.From = Aus
 
 GML.linkToVisit = Hyperlink auf Ihren Besuch
 GML.Show = Zeigen:
+
+GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert
