--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -295,9 +295,9 @@ pdcPeas.error= Error
 external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
-pdcPeas.MustContainsMandatoryAxis=must have a position with the mandatory axis
+pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
 pdcPeas.MustBeClassified = The classification is mandatory to create a publication. <br />Please set a position with the mandatory axis.
-pdcPeas.theContent=The content
+pdcPeas.theContent=This contribution
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
 search.type.2.label= Events
