--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -289,9 +289,9 @@ pdcPeas.error= Erreur
 external.search.server.1.label=Mon serveur externe 1
 external.search.server.2.label=Mon serveur externe 2
 
-pdcPeas.MustContainsMandatoryAxis=doit contenir une position avec les axes obligatoires
+pdcPeas.MustContainsMandatoryAxis=doit être classée sur les axes obligatoires
 pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une publication. <br />Veuillez s\u00e9lectionner une position et la valider.
-pdcPeas.theContent=Le contenu
+pdcPeas.theContent=Cette contribution
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications GED
 search.type.2.label= Ev\u00e9nements
