Generalizing message about mandatory classification

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -296,7 +296,7 @@ external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
-pdcPeas.MustBeClassified = The classification is mandatory to create a publication. <br />Please set a position with the mandatory axis.
+pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications
