--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -284,7 +284,7 @@ pdcPeas.error= Fehler
 # Label linked to pdcPeasSettings.properties
 
 pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
-pdcPeas.MustBeClassified = The classification is mandatory to create a publication. <br />Please set a position with the mandatory axis.
+pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
 pdcPeas.theContent=This contribution
 external.search.server.1.label=Mein Externer Server 1
 external.search.server.2.label=Mein Externer Server 2
